src/main/java/com/example/challenge/userlogin/error/response/EmptyResponse.java
package com.example.challenge.userlogin.error.response;

import com.fasterxml.jackson.databind.annotation.JsonSerialize;

@JsonSerialize
public class EmptyResponse {
}
